Fix Scrollbar and Footer
-Temporary Fix for footer
-Fix Scrollbar Overflow
-Auto Scroll up when reload

--- a/css/style.css
+++ b/css/style.css
@@ -186,16 +186,28 @@ table{
     height: 100vh;
 }
 
-.footer {
+.footer-fixed {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 30px;
     background-color: #009688;
     z-index: 3;
     display: inline-block;
     position: absolute;
     width: 100%;
+    text-align: center;
+    margin:0 auto;
+}
+
+.footer {
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    background-color: #009688;
+    z-index: 3;
+    display: inline-block;
+    width: 100%;
+
+    bottom:0;
     text-align: center;
     margin:0 auto;
 }
